--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Meu Abrigo - Gestão de Abrigo Pet</title>
 
     <base href="/" />
 
@@ -20,7 +20,10 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Meu Abrigo - Gestão de Abrigo Pet"
+    />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
